# OxideCore

./: .gitignore  README.md
os/: Cargo.toml  makefile
os/src/: batch.rs  console.rs  cpu.rs  entry.asm  lang_items.rs  link_app.S  logging.rs  logo.rs  main.rs  sbi.rs  syscall.rs  trap.rs
os/src/sync/: up.rs
os/src/syscall/: fs.rs  process.rs
os/src/trap/: trap.S
user/: Cargo.toml  makefile
user/src/: console.rs  lib.rs  syscall.rs  ulibc.c  ulibc.h
